Migrating to sqlite3 repo
